--- a/hcc-nb/pom.xml
+++ b/hcc-nb/pom.xml
@@ -208,5 +208,10 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.java.dev.glazedlists</groupId>
+            <artifactId>glazedlists_java15</artifactId>
+            <version>1.9.0</version>
+        </dependency>
     </dependencies>
 </project>
