--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,40 @@
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.test.skip>true</maven.test.skip>
     </properties>
+
+    <scm>
+        <url>https://github.com/AlexFalappa/hcc</url>
+        <connection>scm:git:git://github.com/AlexFalappa/hcc.git</connection>
+    </scm>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <!--Generate properties with an incremental buld number, scm revision and build timestamp-->
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>1.3</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>create</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <shortRevisionLength>8</shortRevisionLength>
+                        <revisionOnScmFailure>UNKNOWN</revisionOnScmFailure>
+                        <timestampFormat>{0,date,yyyy/MM/dd HH:mm:ss}</timestampFormat>
+                        <buildNumberPropertiesFileLocation>${basedir}/src/main/resources/buildNumber.properties</buildNumberPropertiesFileLocation>
+                        <format>{0,number}</format>
+                        <items>
+                            <item>buildNumber</item>
+                        </items>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
 </project>
