Introduced maven templating plugin for automatic incremental generation of classes containing maven project properties, build number and timestamp, used in hcc-nb module in the About dialog

--- a/hcc-nb/pom.xml
+++ b/hcc-nb/pom.xml
@@ -27,6 +27,11 @@
         </resources>
         <plugins>
             <plugin>
+                <!--Invoke templating plugin configured in parent pom-->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>templating-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <!--Invoke buildnumber plugin configured in parent pom-->
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
