ncc-nb: started introducing logging via logback, configuration derived from hmagen project

--- a/hcc-nb/pom.xml
+++ b/hcc-nb/pom.xml
@@ -231,5 +231,10 @@
             <artifactId>l2fprod-common-tasks</artifactId>
             <version>7.3</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.2</version>
+        </dependency>
     </dependencies>
 </project>
