--- a/hcc-nb/src/main/resources/buildNumber.properties
+++ b/hcc-nb/src/main/resources/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sat Jan 10 18:25:18 CET 2015
-buildNumber=20
+#Mon May 25 21:55:42 CEST 2015
+buildNumber=22
